N°4283 Replace hardcoded spacing values by SCSS spacing variables

--- a/css/backoffice/blocks-integrations/_field-badge-within-datatable.scss
+++ b/css/backoffice/blocks-integrations/_field-badge-within-datatable.scss
@@ -3,8 +3,8 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-$ibo-field-badge-within-datatable--ibo-field-badge--margin: 0 !default;
-$ibo-field-badge-within-datatable--ibo-field-badge--padding: 0 !default;
+$ibo-field-badge-within-datatable--ibo-field-badge--margin: $ibo-spacing-0 !default;
+$ibo-field-badge-within-datatable--ibo-field-badge--padding: $ibo-spacing-0 !default;
 $ibo-field-badge-within-datatable--ibo-field-badge--text-color: unset !default;
 $ibo-field-badge-within-datatable--ibo-field-badge--background-color: unset !default;
 $ibo-field-badge-within-datatable--ibo-field-badge-dot--size: 10px !default;
