--- a/css/backoffice/components/_title.scss
+++ b/css/backoffice/components/_title.scss
@@ -4,8 +4,8 @@
  */
 
 $ibo-title--text-color: $ibo-color-grey-900 !default;
-$ibo-title--padding-y: 12px !default;
-$ibo-title--padding-x: 0 !default;
+$ibo-title--padding-y: $ibo-spacing-400 !default;
+$ibo-title--padding-x: $ibo-spacing-0 !default;
 
 $ibo-title--icon--size: 90px !default;
 
@@ -83,7 +83,7 @@ $ibo-title--icon-background--size--must-zoomout: 66.67% !default;
 	padding-bottom:1em;
 }
 .ibo-title-separator{
-	border-radius: 5px 5px 0px 0px;
+	border-radius: 5px 5px $ibo-spacing-0 $ibo-spacing-0;
 	border-color:$ibo-color-blue-600;
 	color:$ibo-color-blue-600;
 	background-color:$ibo-color-blue-600;
