--- a/css/backoffice/components/input/_input-select-icon.scss
+++ b/css/backoffice/components/input/_input-select-icon.scss
@@ -3,7 +3,7 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-$ibo-input-select-icon--icon--padding-right: 4px !default;
+$ibo-input-select-icon--icon--padding-right: $ibo-spacing-200 !default;
 
 $ibo-input-select-icon--menu--z-index: 21 !default;
 $ibo-input-select-icon--menu--max-height: 300px !default;
