--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -11,7 +11,7 @@ $ibo-input--background-color: $ibo-color-white-100 !default;
 $ibo-input--border-color: $ibo-color-grey-500 !default;
 
 $ibo-input--padding-x: 10px !default;
-$ibo-input--padding-y: 0px !default;
+$ibo-input--padding-y: $ibo-spacing-0 !default;
 
 $ibo-input--border-radius: $ibo-border-radius-300 !default;
 
