--- a/css/backoffice/layout/activity-panel/_edits-entry.scss
+++ b/css/backoffice/layout/activity-panel/_edits-entry.scss
@@ -7,7 +7,7 @@
 $ibo-edits-entry--short-description--text-color: inherit !default;
 $ibo-edits-entry--long-description-toggler-icon--top: 3px !default;
 $ibo-edits-entry--long-description-toggler-icon--right: 0 !default;
-$ibo-edits-entry--long-description--margin-top: 8px !default;
+$ibo-edits-entry--long-description--margin-top: $ibo-spacing-300 !default;
 
 /* CSS rules */
 /* - Long description */
