--- a/css/backoffice/pages/_attachments.scss
+++ b/css/backoffice/pages/_attachments.scss
@@ -12,13 +12,13 @@ $ibo-attachment--datatable--first-column--line-height: 0px !default;
 
 $ibo-attachment--drag-in--border: 2px $ibo-color-grey-400 dashed !default;
 $ibo-attachment--upload-file--drop-zone-hint--max-height: 200px !default;
-$ibo-attachment--upload-file--drop-zone-hint--margin: 22px 0px !default;
+$ibo-attachment--upload-file--drop-zone-hint--margin: 22px $ibo-spacing-0 !default;
 $ibo-attachment--upload-file--drop-zone-hint--color: $ibo-color-grey-700 !default;
 $ibo-attachment--upload-file--drop-zone-hint--image--margin-bottom: 5px !default;
 
 $ibo-attachment--tab-header--drop-in--background-color: $ibo-color-blue-200 !default;
 $ibo-attachment--tab-header--drop-in--color: $ibo-color-blue-800 !default;
-$ibo-attachment--tab-header--drop-in--icon--padding-left: 8px !default;
+$ibo-attachment--tab-header--drop-in--icon--padding-left: $ibo-spacing-300 !default;
 $ibo-attachment--tab-header--drop-in--icon--content: "\f382" !default;
 $ibo-attachment--tab-header--drop-in--icon--color: $ibo-color-blue-600 !default;
 
