--- a/css/backoffice/utils/variables/_size.scss
+++ b/css/backoffice/utils/variables/_size.scss
@@ -3,7 +3,7 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-$ibo-size-0: 0px !default;
+$ibo-size-0: 0 !default;
 $ibo-size-50: 2px !default;
 $ibo-size-100: 4px !default;
 $ibo-size-150: 8px !default;
