--- a/css/backoffice/components/_alert.scss
+++ b/css/backoffice/components/_alert.scss
@@ -12,10 +12,10 @@ $ibo-alert--border-radius: $ibo-border-radius-300 !default;
 $ibo-alert--title--highlight--width: 4px !default;
 $ibo-alert--title--highlight--height: 100% !default;
 
-$ibo-alert--body--margin-top: 4px !default;
+$ibo-alert--body--margin-top: $ibo-spacing-200 !default;
 
 $ibo-alert-minimized--padding-y: 5px !default;
-$ibo-alert-minimized--title--padding-bottom: 0px !default;
+$ibo-alert-minimized--title--padding-bottom: $ibo-spacing-0 !default;
 
 $ibo-alert--action-button--top: 5px !default;
 $ibo-alert--maximize-minimize-button--right: 30px !default;
