--- a/css/backoffice/components/_newsroom-menu.scss
+++ b/css/backoffice/components/_newsroom-menu.scss
@@ -7,14 +7,14 @@
 $ibo-navigation-menu--notifications-menu--min-width: 250px;
 
 $ibo-navigation-menu--notifications--item--image--margin-x: 6px !default;
-$ibo-navigation-menu--notifications--item--image--margin-y: 0 !default;
+$ibo-navigation-menu--notifications--item--image--margin-y: $ibo-spacing-0 !default;
 $ibo-navigation-menu--notifications--item--image--max-width: 20px !default;
 $ibo-navigation-menu--notifications--item--image--max-height: 20px !default;
 $ibo-navigation-menu--notifications--item--image--border-radius: $ibo-border-radius-full !default;
 
 $ibo-navigation-menu--notifications--item--bottom-text--margin-left: auto !default;
 
-$ibo-navigation-menu--notifications--item--content--padding-y: 0 !default;
+$ibo-navigation-menu--notifications--item--content--padding-y: $ibo-spacing-0 !default;
 $ibo-navigation-menu--notifications--item--content--padding-x: 14px !default;
 $ibo-navigation-menu--notifications--item--content--img--max-height: 100px !default;
 $ibo-navigation-menu--notifications--item--content--img--padding: 5px !default;
@@ -23,11 +23,11 @@ $ibo-navigation-menu--notifications--item--new-message-indicator--width: 10px !d
 $ibo-navigation-menu--notifications--item--new-message-indicator--height: 10px !default;
 $ibo-navigation-menu--notifications--item--new-message-indicator--background-color: $ibo-color-blue-500 !default;
 $ibo-navigation-menu--notifications--item--new-message-indicator--border-radius: $ibo-border-radius-full !default;
-$ibo-navigation-menu--notifications--item--new-message-indicator--margin-top: 4px !default;
+$ibo-navigation-menu--notifications--item--new-message-indicator--margin-top: $ibo-spacing-200 !default;
 
 $ibo-navigation-menu--notifications-show-all-multiple--ibo-popover-menu--indicator--margin-right: 15px !default;
 
-$ibo-navigation-menu--notifications-dismiss-all--icon--margin:  0 10px 0 0 !default;
+$ibo-navigation-menu--notifications-dismiss-all--icon--margin: $ibo-spacing-0 10px $ibo-spacing-0 $ibo-spacing-0 !default;
 
 $ibo-popover-menu--item--no-message--image--svg--width : 100% !default;
 $ibo-popover-menu--item--no-message--image--svg--height : inherit !default;
