--- a/css/backoffice/components/input/_input-date.scss
+++ b/css/backoffice/components/input/_input-date.scss
@@ -7,7 +7,7 @@ $ibo-input-date--width: 100% !default;
 
 $ibo-input-date--button--margin--left: -20px !default;
 $ibo-input-date--button--margin--top: 5px !default;
-$ibo-input-date--button--padding: 0 !default;
+$ibo-input-date--button--padding: $ibo-spacing-0 !default;
 
 $ibo-input-date--button--background-color: transparent !default;
 $ibo-input-date--button--color: $ibo-color-grey-800 !default;
