--- a/css/backoffice/components/popover-menu/_popover-menu.scss
+++ b/css/backoffice/components/popover-menu/_popover-menu.scss
@@ -6,7 +6,7 @@
 /* SCSS variables */
 $ibo-popover-menu--background-color: $ibo-color-white-100 !default;
 $ibo-popover-menu--border-radius: $ibo-border-radius-300 !default;
-$ibo-popover-menu--padding: 0 !default;
+$ibo-popover-menu--padding: $ibo-spacing-0 !default;
 
 $ibo-popover-menu--toggler-visual-hint--margin-left: 0.5rem !default;
 
@@ -35,7 +35,7 @@ $ibo-popover-menu--section-border-radius: $ibo-popover-menu--border-radius !defa
   display: flex;
   flex-direction: column;
   align-self: flex-start;
-  margin: 0px 0px;
+  margin: $ibo-spacing-0 $ibo-spacing-0;
   width: 100%;
   white-space: nowrap;
   overflow: hidden; /* To avoid first/last entries of the menu to have no border-radius on hover */
