--- a/css/backoffice/layout/_top-bar.scss
+++ b/css/backoffice/layout/_top-bar.scss
@@ -5,11 +5,11 @@
 
 /* SCSS variables (can be overloaded) */
 $ibo-top-bar--height: 54px !default;
-$ibo-top-bar--padding-left: 16px !default; /* Should be align with the page content padding-left */
-$ibo-top-bar--padding-right: 16px !default;
-$ibo-top-bar--padding-y: 0px !default;
+$ibo-top-bar--padding-left: $ibo-spacing-500 !default; /* Should be align with the page content padding-left */
+$ibo-top-bar--padding-right: $ibo-spacing-500 !default;
+$ibo-top-bar--padding-y: $ibo-spacing-0 !default;
 $ibo-top-bar--background-color: $ibo-color-white-100 !default;
-$ibo-top-bar--elements-spacing: 32px !default;
+$ibo-top-bar--elements-spacing: $ibo-spacing-700 !default;
 
 $ibo-top-bar--quick-actions--margin-right: $ibo-top-bar--elements-spacing !default;
 
