--- a/css/backoffice/layout/tab-container/_tab-container.scss
+++ b/css/backoffice/layout/tab-container/_tab-container.scss
@@ -5,7 +5,7 @@
 
 /* SCSS variables */
 $ibo-tab-container--tabs-list--height: 36px !default;
-$ibo-tab-container--tabs-list--padding-x: 24px !default;
+$ibo-tab-container--tabs-list--padding-x: $ibo-spacing-600 !default;
 $ibo-tab-container--tabs-list--background-color: $ibo-color-grey-100 !default;
 
 $ibo-tab-container--tab-header--max-width: 110px !default;
@@ -14,20 +14,20 @@ $ibo-tab-container--tab-header--text-color--is-active: $ibo-color-blue-800 !defa
 $ibo-tab-container--tab-header--text-color--on-hover: $ibo-color-blue-800 !default;
 $ibo-tab-container--tab-header--background-color--on-hover: $ibo-color-grey-200 !default;
 
-$ibo-tab-container--tab-toggler--padding-x: 24px !default;
+$ibo-tab-container--tab-toggler--padding-x: $ibo-spacing-600 !default;
 
-$ibo-tab-container--tab-container--padding-x: 32px !default;
-$ibo-tab-container--tab-container--padding-y: 32px !default;
+$ibo-tab-container--tab-container--padding-x: $ibo-spacing-700 !default;
+$ibo-tab-container--tab-container--padding-y: $ibo-spacing-700 !default;
 
 $ibo-tab-container--extra-tabs-container--background-color: $ibo-tab-container--tabs-list--background-color !default;
 
-$ibo-tab-container--extra-tabs-list-toggler--padding-x: 12px !default;
+$ibo-tab-container--extra-tabs-list-toggler--padding-x: $ibo-spacing-400 !default;
 
 $ibo-tab-container--extra-tabs-list--max-height: 300px !default;
 $ibo-tab-container--extra-tabs-list--border-radius: $ibo-border-radius-300;
 $ibo-tab-container--extra-tabs-list--background-color: $ibo-tab-container--tabs-list--background-color !default;
 
-$ibo-tab-container--extra-tab-toggler--padding: 8px 16px !default;
+$ibo-tab-container--extra-tab-toggler--padding: $ibo-spacing-300 $ibo-spacing-500 !default;
 $ibo-tab-container--extra-tab-toggler--max-width: 220px !default;
 $ibo-tab-container--extra-tab-toggler--text-color: $ibo-color-grey-700 !default;
 $ibo-tab-container--extra-tab-toggler--text-color--on-hover: $ibo-color-blue-800 !default;
