--- a/css/backoffice/pages/_audit.scss
+++ b/css/backoffice/pages/_audit.scss
@@ -10,9 +10,9 @@ $ibo-audit--audit-category--panel--body--padding-y: 10px !default;
 $ibo-audit--audit-category--panel--body--padding-x: $ibo-panel--body--padding-x !default;
 
 $ibo-audit--dashboard--padding-y: 18px !default;
-$ibo-audit--dashboard--padding-x: 0 !default;
+$ibo-audit--dashboard--padding-x: $ibo-spacing-0 !default;
 
-$ibo-audit--first-error-alert--margin-top: 24px !default;
+$ibo-audit--first-error-alert--margin-top: $ibo-spacing-600 !default;
 
 $ibo-audit--audit-line--csv-download--height: 2.5em !default;
 
