--- a/css/backoffice/pages/_global-search.scss
+++ b/css/backoffice/pages/_global-search.scss
@@ -3,9 +3,9 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-$ibo-global-search--result--title--image--max-height: 48px !default;
+$ibo-global-search--result--title--image--max-height: $ibo-spacing-800 !default;
 $ibo-global-search--result--title--image--max-width: $ibo-global-search--result--title--image--max-height !default;
-$ibo-global-search--result--title--image--margin-right: 8px !default;
+$ibo-global-search--result--title--image--margin-right: $ibo-spacing-300 !default;
 
 .ibo-global-search--result--title{
   @extend %ibo-font-ral-nor-150;
