--- a/css/backoffice/pages/_preferences.scss
+++ b/css/backoffice/pages/_preferences.scss
@@ -7,7 +7,7 @@ $ibo-preferences--panel--margin-x: auto !default;
 
 $ibo-preferences--user-preferences--picture-placeholder--image--diameter: 54px !default;
 $ibo-preferences--user-preferences--picture-placeholder--image--border-radius: $ibo-border-radius-full !default;
-$ibo-preferences--user-preferences--picture-placeholder--image--margin: 12px !default;
+$ibo-preferences--user-preferences--picture-placeholder--image--margin: $ibo-spacing-400 !default;
 $ibo-preferences--user-preferences--picture-placeholder--image--background-color: $ibo-color-grey-300 !default;
 
 $ibo-preferences--user-preferences--picture-placeholder--image--active--border-color: $ibo-color-blue-800;
@@ -19,8 +19,8 @@ $ibo-keyboard-shortcut--input--color: $ibo-color-grey-800 !default;
 $ibo-keyboard-shortcut--input--background-color: transparent !default;
 $ibo-keyboard-shortcut--input--border-color: $ibo-color-grey-500 !default;
 $ibo-keyboard-shortcut--input--border-radius: $ibo-border-radius-300 !default;
-$ibo-keyboard-shortcut--input--padding-y: 2px !default;
-$ibo-keyboard-shortcut--input--padding-x: 4px !default;
+$ibo-keyboard-shortcut--input--padding-y: $ibo-spacing-100 !default;
+$ibo-keyboard-shortcut--input--padding-x: $ibo-spacing-200 !default;
 $ibo-keyboard-shortcut--input--margin-bottom: 5px !default;
 
 $ibo-keyboard-shortcut--input--is-focus--color: $ibo-color-primary-800 !default;
