Replace hardcoded font size with SCSS variables

--- a/css/backoffice/layout/activity-panel/_activity-panel.scss
+++ b/css/backoffice/layout/activity-panel/_activity-panel.scss
@@ -92,7 +92,7 @@ $ibo-activity-panel--add-caselog-entry-button--hover--box-shadow: $ibo-elevation
 
 $ibo-activity-panel--add-caselog-entry-button--icon--height: 100% !default;
 $ibo-activity-panel--add-caselog-entry-button--icon--width: $ibo-activity-panel--add-caselog-entry-button--icon--height !default;
-$ibo-activity-panel--add-caselog-entry-button--icon--font-size: 16px !default;
+$ibo-activity-panel--add-caselog-entry-button--icon--font-size: $ibo-font-size-200 !default;
 $ibo-activity-panel--add-caselog-entry-button--icon--line-height: 33px !default;
 
 $ibo-activity-panel--entry-forms-confirmation-explanation--spacing: $ibo-spacing-500 !default;
