--- a/css/backoffice/layout/_navigation-menu.scss
+++ b/css/backoffice/layout/_navigation-menu.scss
@@ -156,7 +156,7 @@ $ibo-navigation-menu--menu-node-counter--padding-x: 6px !default;
 $ibo-navigation-menu--menu-node-counter--width: 34px !default;
 $ibo-navigation-menu--menu-node-counter--background-color: $ibo-navigation-menu--menu-node--background-color !default;
 
-$ibo-navigation-menu--notifications-toggler--font-size: 24px !default;
+$ibo-navigation-menu--notifications-toggler--font-size: $ibo-font-size-400 !default;
 $ibo-navigation-menu--notifications-toggler--color: $ibo-color-grey-600 !default;
 $ibo-navigation-menu--notifications-toggler--color--is-loaded: $ibo-color-grey-300 !default;
 $ibo-navigation-menu--notifications-toggler--color--on-hover: $ibo-color-white-200 !default;
