--- a/css/backoffice/layout/activity-panel/_activity-entry.scss
+++ b/css/backoffice/layout/activity-panel/_activity-entry.scss
@@ -37,7 +37,7 @@ $ibo-activity-entry--main-information--is-closed--placeholder-top: 30px !default
 $ibo-activity-entry--main-information--is-closed--placeholder-padding-left: $ibo-activity-entry--main-information--padding-x !default;
 
 $ibo-activity-entry--main-information-icon--text-color: $ibo-color-grey-700 !default;
-$ibo-activity-entry--main-information-icon--font-size: 16px !default;
+$ibo-activity-entry--main-information-icon--font-size: $ibo-font-size-200 !default;
 
 $ibo-activity-entry--sub-information--margin-top: $ibo-spacing-200 !default;
 $ibo-activity-entry--sub-information--margin-bottom: $ibo-activity-entry--sub-information--margin-top !default;
